2008-12-09  Jonathan Pryor  <jpryor@novell.com>

	* EnumerableValueReaderTest.cs, TextValueReaderTest.cs: Ensure that an
	  InvalidOperationException is thrown when we read past the end of the
	  Reader.

2008-12-08  Jonathan Pryor  <jpryor@novell.com>

	* DelegateTest.cs: Add tests for .Timings().

2008-12-04  Jonathan Pryor  <jpryor@novell.com>

	* MaybeTest.cs: Add test for .Equals().

2008-10-04  Jonathan Pryor  <jpryor@novell.com>

	* DelegateTest.cs: Add tests for traditional .Curry().

2008-10-04  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Flush .Tokens() test.
	* IEnumerableTest.cs, JaggedArrayTest.cs, MaybeTest.cs: Disable 
	  some warnings.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* TextReaderTest.cs: Update tests to check for TextReader disposal 
	  by default.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* EitherTest.cs: Add some tests for IConvertible support within
	  Either.TryParse().
	* MaybeTest.cs: int->bool is now valid (via Convert.ChangeType), so
	  try a int->DateTime conversion, which is currently unsupported.
	* EnumerableValueReaderTest.cs: Show type conversion functionality
	  in-action, by reading an int[] into a short, char, and decimal.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add tests for .Tokens().
	* MaybeTest.cs: Remove compiler warning.
	* StringTest.cs: Add tests for .Tokens().
	* TextReaderTest.cs: Add tests for .Tokens().
	* TextValueReaderTest.cs: Use .Tokens(), not .Words(), and update to
	  new parameter types.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* EnumerableValueReaderTest.cs: Update the type thrown for unsupported
	  conversions.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* TextReaderTest.cs: Add #region for doc usage.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* EitherTest.cs: Add tests for .TryParse() method.
	* EnumerableValueReaderTest.cs: Added; tests for EnumerableValueReader.